# promo-navigator

./: .env.deploy.example  .gitignore  AGENTS.md  README.md  docker-compose.deploy.yml  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/versions/: 20260615_0003_bundles.py
backend/app/api/: router.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/models/: __init__.py  bundle.py  bundle_product.py  product.py  seller.py
backend/app/modules/bundles/: router.py
backend/app/modules/recommendations/: __init__.py  router.py
backend/app/repositories/: bundle.py  recommendation.py
backend/app/schemas/: bundle.py  recommendation.py
backend/app/services/: bundle.py  recommendation.py  recommendation_prompt.py
docs/: database-schema-eng.md  database-schema-ru.md  llm-recommendation-contract-ru.md  llm-state-summary-ru.md
frontend/: .env.example  Dockerfile  nginx.https.conf.template
frontend/src/: index.css
frontend/src/app/: theme.ts
frontend/src/app/router/: index.tsx
frontend/src/features/auth/: auth-context.tsx
frontend/src/features/bundles/: api.ts  use-bundles.ts
frontend/src/features/products/: SellerProductPreview.tsx
frontend/src/features/recommendations/: RecommendationProvider.tsx  api.ts  recommendation-context.ts  use-recommendation.ts
frontend/src/pages/bundles/: BundleConstructorPage.tsx  BundleListPage.tsx
frontend/src/pages/home/: MechanicWorkspacePage.tsx  (+3 more)
infra/scripts/: deploy-server-cheatsheet.sh  ollama-runtime.md  redeploy-app.sh
infra/sql/seeds/: 003_seed_bundles.sql
(+6 files in other folders)
